--- a/client-app/pom.xml
+++ b/client-app/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>23</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
     </dependencies>
 
 
