--- a/shared-app/pom.xml
+++ b/shared-app/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>23</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
     </dependencies>
 
 </project>
